src/test/ui/issues/issue-7970a.stderr
error: unexpected end of macro invocation
  --> $DIR/issue-7970a.rs:16:5
   |
LL | / macro_rules! one_arg_macro {
LL | |     ($fmt:expr) => (print!(concat!($fmt, "/n")));
LL | | }
   | |_- when calling this macro
...
LL |       one_arg_macro!();
   |       ^^^^^^^^^^^^^^^^^ unexpected end of macro invocation

error: aborting due to previous error

